# track-anything-annotate

./: .gitignore  README.md  README.ru.md  ann.py  annotate_json.py  annotation.py  config.py  demo.py  interactive_video.py  pyproject.toml  sam_controller.py  segmenter.py  segmenter_fast.py  test.py  tracker.py  tracker_core_xmem.py  tracker_core_xmem2.py  xmem2_tracker.py  xmem_tracker.py
core/: __init__.py  video_processor.py
dataset_export/: base_saver.py  coco.py  config.py  factory.py  helpers.py  pipeline.py  utils.py  voc.py  yolo.py
legacy/XMem/inference/: inference_core.py  memory_manager.py
legacy/XMem/inference/data/: mask_mapper.py
legacy/XMem/inference/interact/: gui_utils.py  interactive_utils.py
legacy/XMem/inference/interact/fbrs/inference/: utils.py
legacy/XMem/model/: modules.py
tools/: annotations_prompts_types.py  checkframes.py  contour_detector.py  converter.py  data_exporter.py  mask_display.py  mask_merge.py  types.py
ui/: __init__.py
ui/cli/: frame_viewer.py
ui/web/: __init__.py  gradio_app.py
video-test/: INSTRUCTION.md  video.json
