[project]
name = "track"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdown>=5.2.0",
    "gitpython>=3.1.45",
    "gradio>=5.44.1",
    "matplotlib>=3.10.6",# 3.9.2"
    "opencv-python>=4.12.0.88",
    "progressbar2>=4.5.0",
    "psutil>=7.0.0",
    "sam-2",
    "setuptools>=78.1.0",
    "thinplate",
    "tqdm>=4.67.1",
]

# dependecies for sam2 if have problem with install https://github.com/facebookresearch/sam2.git
# "setuptools>=62.3.0,<75.9",
# "torch>=2.6.0",


[tool.ruff]
exclude = ["XMem", "XMem2"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
ignore = ["E501"]

[project.optional-dependencies]
cpu = [
  "torch>=2.8.0",
  "torchvision>=0.23.0",
]
cu129 = [
  "torch>=2.8.0",
  "torchvision>=0.23.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu129" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu129", extra = "cu129" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu129", extra = "cu129" },
]

# sam-2 = { git = "https://github.com/lnikioffic/sam2.git" }
thinplate = { git = "https://github.com/cheind/py-thin-plate-spline" }
sam-2 = { git = "https://github.com/facebookresearch/sam2.git" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
