[project]
name = "track"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gdown>=5.2.1",
    "gitpython>=3.1.46",
    "gradio>=6.9.0",
    "matplotlib>=3.10.8",# 3.9.2"
    "opencv-python>=4.13.0.92",
    "progressbar2>=4.5.0",
    "psutil>=7.2.2",
    "sam-2",
    "setuptools>=82.0.1",
    "thinplate",
    "tqdm>=4.67.3",
]

# dependecies for sam2 if have problem with install https://github.com/facebookresearch/sam2.git
# "setuptools>=62.3.0,<75.9",
# "torch>=2.6.0",


[tool.ruff]
line-length = 100
exclude = ["XMem", "XMem2"]

[tool.ruff.format]
quote-style = "single"

[project.optional-dependencies]
cpu = [
  "torch>=2.10.0",
  "torchvision>=0.25.0",
]
gpu = [
  "torch>=2.10.0",
  "torchvision>=0.25.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "gpu" },
  ],
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-gpu", extra = "gpu" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-gpu", extra = "gpu" },
]

# sam-2 = { git = "https://github.com/lnikioffic/sam2.git" }
thinplate = { git = "https://github.com/cheind/py-thin-plate-spline" }
sam-2 = { git = "https://github.com/facebookresearch/sam2.git" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
